--- a/Swagger/paths/utente.yml
+++ b/Swagger/paths/utente.yml
@@ -4,6 +4,9 @@
     description: Permette all'utente di creare un profilo
 /utente/{utente_id}/preferiti:
   get:
-    summary: Ottiene i preferiti dell'utente specificato
+    summary: Servizi preferiti utente
+    description: Ottiene gli id dei servizi preferiti dall'utente {utente_id}
+    security: 
+      - BearerAuth: [Utente]
 
 
