--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "primeicons": "^7.0.0",
     "vue": "^3.5.12",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
