--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,4 +1,4 @@
 # MONGO_URI=mongodb+srv://Trentus:HblqZjDFTxwK5Orf@trentus.j6m0g.mongodb.net/?retryWrites=true&w=majority&appName=Trentus
 MONGO_URI="mongodb+srv://Trentus:HblqZjDFTxwK5Orf@trentus.j6m0g.mongodb.net/?retryWrites=true&w=majority&appName=Trentus"
 PORT=5000
-JWT_SECRET = 'lucamerda'; // chiave per generare i token
+JWT_SECRET = '84537TR'; // chiave per generare i token
