--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
+    "dotenv": "^16.4.7",
     "primeicons": "^7.0.0",
     "vue": "^3.5.12",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.7.4"
+    "vuetify": "^3.7.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
