--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
     "primeicons": "^7.0.0",
     "vue": "^3.5.12",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "vuetify": "^3.7.4",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "css": "^3.0.0",
