--- a/Back-end/.env
+++ b/Back-end/.env
@@ -2,3 +2,4 @@
 MONGO_URI="mongodb+srv://Trentus:HblqZjDFTxwK5Orf@trentus.j6m0g.mongodb.net/?retryWrites=true&w=majority&appName=Trentus"
 PORT=5000
 JWT_SECRET = '84537TR'; // chiave per generare i token
+FRONTEND = '../frontend/dist'; // indirizzo del frontend 
