--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build": "node app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
